Add main semantic html tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <h1>SoundCloud Player</h1>
 
       <div class="audio-player">
@@ -53,7 +53,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
     <script src="https://unpkg.com/wavesurfer.js@4.6.0/dist/wavesurfer.js"></script>
     <script src="script.js"></script>
   </body>
